--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
-    "@angular/common": "^12.2.0",
-    "@angular/compiler": "^12.2.0",
-    "@angular/compiler-cli": "12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/forms": "^12.2.0",
-    "@angular/localize": "^12.0.0",
-    "@angular/platform-browser": "^12.2.0",
-    "@angular/platform-browser-dynamic": "^12.2.0",
-    "@angular/router": "^12.2.0",
+    "@angular/animations": "^12.2.5",
+    "@angular/common": "^12.2.5",
+    "@angular/compiler": "^12.2.5",
+    "@angular/compiler-cli": "^12.2.5",
+    "@angular/core": "^12.2.6",
+    "@angular/forms": "^12.2.5",
+    "@angular/localize": "^12.2.5",
+    "@angular/platform-browser": "^12.2.5",
+    "@angular/platform-browser-dynamic": "^12.2.5",
+    "@angular/router": "^12.2.5",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@popperjs/core": "^2.9.3",
+    "@popperjs/core": "^2.10.1",
     "angular-split": "^5.0.0",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^5.1.1",
     "rxjs": "^7.3.0",
-    "tslib": "^2.3.0",
-    "typescript": ">=4.2.3 <4.4",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3",
     "zone.js": "^0.11.4"
   },
   "scripts": {
