--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bootstrap": "^5.2.3",
     "rxjs": "^7.6.0",
     "tslib": "^2.4.1",
-    "typescript": "^4.9.3",
+    "typescript": ">=4.8.2 <4.9",
     "zone.js": "^0.12.0"
   },
   "scripts": {
