--- a/package.json
+++ b/package.json
@@ -3,24 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.2",
-    "@angular/common": "^15.0.2",
-    "@angular/compiler": "^15.0.2",
-    "@angular/compiler-cli": "^15.0.2",
-    "@angular/core": "^15.0.2",
-    "@angular/forms": "^15.0.2",
-    "@angular/localize": "^15.0.2",
-    "@angular/platform-browser": "^15.0.2",
-    "@angular/platform-browser-dynamic": "^15.0.2",
-    "@angular/router": "^15.0.2",
-    "@ng-bootstrap/ng-bootstrap": "^14.0.0",
+    "@angular/animations": "^15.2.2",
+    "@angular/common": "^15.2.2",
+    "@angular/compiler": "^15.2.2",
+    "@angular/compiler-cli": "^15.2.2",
+    "@angular/core": "^15.2.2",
+    "@angular/forms": "^15.2.2",
+    "@angular/localize": "^15.2.2",
+    "@angular/platform-browser": "^15.2.2",
+    "@angular/platform-browser-dynamic": "^15.2.2",
+    "@angular/router": "^15.2.2",
+    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "@popperjs/core": "^2.11.6",
-    "angular-split": "^14.1.0",
+    "angular-split": "^15.0.0",
     "bootstrap": "^5.2.3",
-    "rxjs": "^7.6.0",
-    "tslib": "^2.4.1",
-    "typescript": ">=4.8.2 <4.9",
-    "zone.js": "^0.12.0"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.5.0",
+    "typescript": "^4.9.5",
+    "zone.js": "^0.13.0"
   },
   "scripts": {
     "ng": "ng",
